# nhl-cup-predictor2026

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/features/: __main__.py  engineering.py
src/scrape/: __init__.py  __main__.py  moneypuck.py  nhl_api.py  pipeline.py
src/simulate/: __init__.py
tests/: conftest.py  test_features.py  test_scrape.py
